# crosscompile-rpi

./: .gitignore  README.md  configure.ac
include/: hello.h
src/: Makefile.am  hello.cpp
